# Aditya-L1_Plasma_Lab

./: .env.example  .gitignore  README.md  dashboard.html  explorer.html  index.html  lab.html  pyproject.toml  requirements-workflow.txt  visualizer.html
.github/workflows/: fetch_data.yml
css/: nova.css  style.css
data/: history.json  latest.json
data/cache/SWIS/20260413/: AL1_ASW91_L2_BLK_20260413_UNP_9999_999999_V02.cdf
data/cache/SWIS/20260414/: AL1_ASW91_L2_BLK_20260414_UNP_9999_999999_V02.cdf
js/: app.js  dashboard.js  lab.js  nova.js
scripts/: fetch_and_process.py
