[project]
name = "aditya-l1-plasma-lab"
version = "0.1.0"
description = "Aditya-L1 in-situ plasma data pipeline"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore  = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py311"]
